  #5 : only allow to edit orcid (commit: bb776cd52e79d957e6998e89aad56d4cb22dfe82)
  #5 : change text "You can edit any of the details below." to "Verify your profile details below."

- app/views/branded/layouts/_signin_signout.html.erb

  disabled language tab

  added link to /switch_user/edit

- config/initializers/ugent.rb

  * add missing length validation to Plan#title

    cf. https://github.com/DMPbelgium/roadmap/issues/29
    cf. https://github.com/DMPRoadmap/roadmap/issues/3068

    without this one cannot save the plan with a title
    longer than 255 characters as the underlying table
    only allows for 255 characters

    remove when needed as soon as fixed upstream

  * add method Contributor#to_user that fetches
    user record, based on shared email attribute

  * add method User#orcid_logo, User#orcid_link and User#name_and_orcid.
    these methods are used in order to render an orcid link
    on the html/docx/pdf plan export

  * change PlanPolicy#create? so that users with Org "guests" cannot
      create plans

  * overrides method Identifier#value_uniqueness_with_scheme in such a way that

    * multiple shibboleth identifiers per org are possible (and therefore loginroutes)
    * multiple orcid identifiers per user are possible

  * overrides methods of Users::OmniauthCallbacksController

  * adds relation question_options_themes to QuestionOption

    this reuses an old (custom!) generated table options_themes,
    that was not part of DMPOnline_v4, but which we added ourselves.

    this way we can attach themes to question options

    These associations can only be read/updated in the RailsAdmin controller
    http://localhost:3000/admin/question_option

  * adds methods to model User:

    * alternative_accounts
    * nemo
    * ensure_password
    * guest?
    * set_org_by_email

  * skip invitation email, and clears invitation_token when you login

  * adds before_validation to model User:
